erDiagram
    issue_type }|--o{ issue_report : "Issues must be tagged with at least one issue type."
    accepted_state ||--o{ issue_report : "An issue always has a current status."
    issue_report ||--o{ report_image : "One or more photos may be attached to an issue."
    issue_report }o--|| user_profile : "Users may make multiple reports."
    report_location ||--|| issue_report : "Issues are associated with their location."


    issue_type {
        Long issue_type_id "PK"
        String issue_type_tag "UK1"
        String issue_type_description
    }
    accepted_state {
        Long accepted_state_id "PK"
        String status_tag "UK1"
        String status_tag_description
    }
    report_location {
        Long report_location_id "PK"
        Double latitude "N"
        Double longitude "N"
        String street_coordinate "N"
        String location_description "N"
    }
    report_image {
        Long report_image_id "PK"
        Long issue_report_id "FK1"
        URI image_locator
        String filename
        String mime_type
    }
    user_profile {
        Long user_profile_id "PK"
        String oauth_key "UK1"
        String display_name
        String email "IX1"
        URL avatar "N"
        Boolean is_manager
        Instant time_created
        Boolean user_enabled
    }
    issue_report {
        Long issue_report_id "PK"
        Long user_profile_id "FK1"
        Long report_location_id "FK2"
        Long accepted_state_id "FK3"
        Instant time_first_reported "IX1"
        Instant time_last_modified "IX2"
        String text_description "N"
    }